--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
 idna==3.10
+iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.29.0
 isoduration==20.11.0
@@ -59,7 +60,8 @@ nest-asyncio==1.6.0
 networkx==3.4.2
 notebook==7.2.2
 notebook_shim==0.2.4
-numpy==2.1.3
+numpy==1.26.4
+opencv-python==4.10.0.84
 overrides==7.7.0
 packaging==24.2
 pandocfilters==1.5.1
@@ -67,6 +69,7 @@ parso==0.8.4
 pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
+pluggy==1.5.0
 prometheus_client==0.21.0
 prompt_toolkit==3.0.48
 psutil==6.1.0
@@ -75,6 +78,7 @@ pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.18.0
 pyparsing==3.2.0
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
 PyYAML==6.0.2
@@ -95,7 +99,7 @@ tinycss2==1.4.0
 torch==2.2.2
 torchvision==0.17.2
 tornado==6.4.2
-tqdm==4.67.0
+tqdm==4.67.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241003
 typing_extensions==4.12.2
