Modified code to adapt to new paths

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,8 +2,14 @@ SRC_FOLDER = $(shell pwd)
 PYTHONPATH = $(SRC_FOLDER)
 
 DATASET_FOLDER = ../data/datasets
-TRAIN_PATH = $(DATASET_FOLDER)/train/dataset_2000_100_5.pth
-TEST_PATH = $(DATASET_FOLDER)/test/dataset_500_100_5.pth
+
+N_TRAIN = 10000
+N_TEST = 1000
+N_CLASSES = 50
+HOLE_PERCENTAGE = 5
+
+TRAIN_PATH = $(DATASET_FOLDER)/train/dataset_$(N_TRAIN)_$(N_CLASSES)_$(HOLE_PERCENTAGE).pth
+TEST_PATH = $(DATASET_FOLDER)/test/dataset_$(N_TEST)_$(N_CLASSES)_$(HOLE_PERCENTAGE).pth
 
 MODELS_FOLDER = $(SRC_FOLDER)/models
 
