--- a/src/data_preprocessing/Makefile
+++ b/src/data_preprocessing/Makefile
@@ -1,10 +1,6 @@
 include ../Makefile
 
-.PHONY: download run zip unzip help
-
-run:
-	@echo "Creating train dataset..."
-	python3 $(PREPROCESSING_FOLDER)/create_dataset.py $(TINY_IMAGENET_FOLDER) $(DATASET_FOLDER)/train $(DATASET_FOLDER)/test $(N_TRAIN) $(N_TEST) $(N_CLASSES) $(MASK_PERCENTAGE)
+.PHONY: download zip unzip help
 
 zip:
 	@echo "Zipping dataset..."
