--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,5 +33,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # - name: Run tests
-        # run: PYTHONPATH=./src pytest
+      - name: Run tests
+        run: PYTHONPATH=./src pytest
