--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Do not track the following files
 
 # Test notebook
-src/test.ipynb
+**.ipynb
 
 # Python cache
 **__pycache__
@@ -25,6 +25,3 @@ figs/*
 
 # Json files
 *.json
-
-# Sample inpainting figures
-figs/inpainting_results/*
