--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,19 @@ networkx==3.4.2
 notebook==7.3.2
 notebook_shim==0.2.4
 numpy==1.26.4
-opencv-python==4.10.0.84
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.1.105
+opencv-python-headless==4.10.0.84
 optuna==4.1.0
 overrides==7.7.0
 packaging==24.2
@@ -126,6 +138,7 @@ torchvision==0.17.2
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+triton==2.2.0
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2024.2
