Moved parameter selection to json

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,49 +1,26 @@
-N_TRAIN := 2000
-N_TEST := 900
-N_CLASSES := 10
-MASK_PERCENTAGE := 5
-RGB := False
-BATCH_SIZE := 64
-EPOCHS := 10
-LEARNING_RATE := 0.001
-IMAGES_WIDTH := 64
-IMAGES_HEIGHT := 64
-N_CHANNELS := 1
-INITIALIZE := True
-LR_SCHEDULER := True
-STEP_SIZE := 1
-GAMMA := LEARNING_RATE / EPOCHS
+BASE_MAKEFILE_DIR := $(dir $(realpath $(lastword $(MAKEFILE_LIST))))
+BASE_DIR := $(realpath $(BASE_MAKEFILE_DIR)/../)
 
-# simple_conv, conv_unet, conv_maxpool, transformer
-MODEL_NAME := conv_maxpool
+SRC_FOLDER := $(BASE_DIR)/src
+PYTHONPATH := $(SRC_FOLDER)
+PYTHON := $(shell which python3)
 
-# cifar10, tinyimagenet, groceries
-DATASET_NAME := tinyimagenet
+CONFIG_FILE_PATHS := $(SRC_FOLDER)/paths.json
+CONFIG_FILE_PARAMS := $(SRC_FOLDER)/params.json
 
-ifeq ($(MODEL_NAME), simple_conv)
-	MIDDLE_LAYERS := 64 128 256
-	KERNEL_SIZES := 3 3 3
-	STRIDES := 2 2 2
-	PADDINGS := 1 1 1
-	OUTPUT_PADDINGS := 1 1 1
-else ifeq ($(MODEL_NAME), conv_unet)
-	MIDDLE_LAYERS := 64 128 256
-	KERNEL_SIZES := 3 3 3
-	STRIDES := 1 1 1
-	PADDINGS := 1 1 1
-	OUTPUT_PADDINGS := 0 0 0
-else ifeq ($(MODEL_NAME), conv_maxpool)
-	MIDDLE_LAYERS := 64 128 256 512 1024
-	KERNEL_SIZES := 3 3 3
-	STRIDES := 1 1 1
-	PADDINGS := 1 1 1
-	OUTPUT_PADDINGS := 0 0 0
-else ifeq ($(MODEL_NAME), transformer)
-	PATCH_SIZE := 16
-	EMBEDDING_DIM := 1024
-	NUM_HEADS := 16
-	NUM_LAYERS := 8
-endif
+N_TRAIN := $(shell jq -r '.n_train' $(CONFIG_FILE_PARAMS))
+N_TEST := $(shell jq -r '.n_test' $(CONFIG_FILE_PARAMS))
+N_CLASSES := $(shell jq -r '.n_classes' $(CONFIG_FILE_PARAMS))
+MASK_PERCENTAGE := $(shell jq -r '.mask_percentage' $(CONFIG_FILE_PARAMS))
+RGB := $(shell jq -r '.rgb' $(CONFIG_FILE_PARAMS))
+BATCH_SIZE := $(shell jq -r '.batch_size' $(CONFIG_FILE_PARAMS))
+EPOCHS := $(shell jq -r '.epochs' $(CONFIG_FILE_PARAMS))
+LEARNING_RATE := $(shell jq -r '.learning_rate' $(CONFIG_FILE_PARAMS))
+N_CHANNELS := $(shell jq -r '.n_channels' $(CONFIG_FILE_PARAMS))
+INITIALIZE := $(shell jq -r '.initialize' $(CONFIG_FILE_PARAMS))
+LR_SCHEDULER := $(shell jq -r '.scheduler' $(CONFIG_FILE_PARAMS))
+MODEL_NAME := $(shell jq -r '.model_name' $(CONFIG_FILE_PARAMS))
+DATASET_NAME := $(shell jq -r '.dataset_name' $(CONFIG_FILE_PARAMS))
 
 MODEL_IDENTIFIER := $(N_TRAIN)_$(N_TEST)_$(N_CLASSES)_$(MASK_PERCENTAGE)_$(EPOCHS)_$(BATCH_SIZE)_$(LEARNING_RATE)
 
@@ -54,14 +31,6 @@ endif
 ifeq ($(INITIALIZE), True)
 	MODEL_IDENTIFIER := $(MODEL_IDENTIFIER)_initialized
 endif
-
-
-BASE_MAKEFILE_DIR := $(dir $(realpath $(lastword $(MAKEFILE_LIST))))
-BASE_DIR := $(realpath $(BASE_MAKEFILE_DIR)/../)
-
-SRC_FOLDER := $(BASE_DIR)/src
-PYTHONPATH := $(SRC_FOLDER)
-PYTHON := $(shell which python3)
 
 DATA_FOLDER := $(BASE_DIR)/data
 FIGURES_FOLDER := $(BASE_DIR)/figs
@@ -93,7 +62,6 @@ TEST_PATH := $(DATASET_FOLDER)/test/dataset_$(N_TEST)_$(N_CLASSES)_$(MASK_PERCEN
 ifeq ($(RGB), True)
 	TRAIN_PATH := $(TRAIN_PATH)_rgb.pth
 	TEST_PATH := $(TEST_PATH)_rgb.pth
-	N_CHANNELS := 3
 else
 	TRAIN_PATH := $(TRAIN_PATH).pth
 	TEST_PATH := $(TEST_PATH).pth
@@ -105,8 +73,6 @@ LR_DATA_PATH := $(LR_DATA_FOLDER)/$(MODEL_NAME)_$(MODEL_IDENTIFIER).csv
 RESULTS_PLOT_PATH := $(RESULTS_PLOT_FOLDER)/$(MODEL_NAME)_$(MODEL_IDENTIFIER).png
 RESULTS_PATH := $(RESULTS_FOLDER)/$(MODEL_NAME)_$(MODEL_IDENTIFIER).json
 WEIGHTS_PATH := $(WEIGHTS_FOLDER)/$(MODEL_NAME)_$(MODEL_IDENTIFIER).pth
-CONFIG_FILE_PATHS := $(SRC_FOLDER)/paths.json
-CONFIG_FILE_PARAMS := $(SRC_FOLDER)/params.json
 
 
 .DEFAULT:
@@ -122,17 +88,6 @@ else ifeq ($(DATASET_NAME), groceries)
 	@echo ', "train_path": "$(TRAIN_PATH)", "test_path": "$(TEST_PATH)", "image_extension": ".png"' >> $(CONFIG_FILE_PATHS)
 endif
 	@echo '}' >> $(CONFIG_FILE_PATHS)
-
-
-	@echo '{"model_name": "$(MODEL_NAME)", "n_train": "$(N_TRAIN)", "n_test": "$(N_TEST)", "n_classes": "$(N_CLASSES)", "image_width": "$(IMAGES_WIDTH)", "image_height": "$(IMAGES_HEIGHT)", "n_channels": "$(N_CHANNELS)", "mask_percentage": "$(MASK_PERCENTAGE)", "rgb": "$(RGB)", "batch_size": "$(BATCH_SIZE)", "epochs": "$(EPOCHS)", "learning_rate": "$(LEARNING_RATE)", "scheduler": "$(LR_SCHEDULER)", "sched_step": "$(STEP_SIZE)", "sched_gamma": "$(GAMMA)", "initialize": "$(INITIALIZE)"' > $(CONFIG_FILE_PARAMS)
-
-ifeq ($(MODEL_NAME), transformer)
-	@echo ', "patch_size": "$(PATCH_SIZE)", "embedding_dim": "$(EMBEDDING_DIM)", "num_heads": "$(NUM_HEADS)", "num_layers": "$(NUM_LAYERS)"' >> $(CONFIG_FILE_PARAMS)
-else
-	@echo ', "middle_layers": "$(MIDDLE_LAYERS)", "kernel_sizes": "$(KERNEL_SIZES)", "strides": "$(STRIDES)", "paddings": "$(PADDINGS)", "output_paddings": "$(OUTPUT_PADDINGS)"' >> $(CONFIG_FILE_PARAMS)
-endif
-
-	@echo '}' >> $(CONFIG_FILE_PARAMS)
 
 preprocess : config
 	@echo "\nCreating train dataset with $(DATASET_CREATION_CODE_PATH) code..."
