--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,9 @@ venv
 **/.ipynb_checkpoints
 
 # Datasets
-data/*
-!data/results
+data/datasets/*
+data/tinyimagenet*
+data/*.zip
 
 # Json files in src folder
 src/**.json
