Changed accordingly to other changes

--- a/src/Makefile
+++ b/src/Makefile
@@ -57,15 +57,8 @@ RESULTS_PLOT_FOLDER := $(FIGURES_FOLDER)/results
 DATASET_CREATION_CODE_PATH := $(PREPROCESSING_FOLDER)/create_dataset.py
 TRAIN_CODE_PATH := $(SRC_FOLDER)/train.py
 
-TRAIN_PATH := $(DATASET_FOLDER)/train/dataset_$(N_TRAIN)_$(N_CLASSES)_$(MASK_PERCENTAGE)
-TEST_PATH := $(DATASET_FOLDER)/test/dataset_$(N_TEST)_$(N_CLASSES)_$(MASK_PERCENTAGE)
-ifeq ($(RGB), True)
-	TRAIN_PATH := $(TRAIN_PATH)_rgb.pth
-	TEST_PATH := $(TEST_PATH)_rgb.pth
-else
-	TRAIN_PATH := $(TRAIN_PATH).pth
-	TEST_PATH := $(TEST_PATH).pth
-endif
+TRAIN_PATH := $(DATASET_FOLDER)/train/dataset_$(N_TRAIN)_$(N_CLASSES)_$(MASK_PERCENTAGE).pth
+TEST_PATH := $(DATASET_FOLDER)/test/dataset_$(N_TEST)_$(N_CLASSES)_$(MASK_PERCENTAGE).pth
 
 
 LOSS_DATA_PATH := $(LOSSES_DATA_FOLDER)/$(MODEL_NAME)_$(MODEL_IDENTIFIER).csv
