Added mask shape option

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,6 +21,7 @@ INITIALIZE := $(shell jq -r '.initialize' $(CONFIG_FILE_PARAMS))
 LR_SCHEDULER := $(shell jq -r '.scheduler' $(CONFIG_FILE_PARAMS))
 MODEL_NAME := $(shell jq -r '.model_name' $(CONFIG_FILE_PARAMS))
 DATASET_NAME := $(shell jq -r '.dataset_name' $(CONFIG_FILE_PARAMS))
+MASK_TYPE := $(shell jq -r '.mask_name' $(CONFIG_FILE_PARAMS))
 
 MODEL_IDENTIFIER := $(N_TRAIN)_$(N_TEST)_$(N_CLASSES)_$(MASK_PERCENTAGE)_$(EPOCHS)_$(BATCH_SIZE)_$(LEARNING_RATE)
 
@@ -61,8 +62,8 @@ RESULTS_PLOT_FOLDER := $(FIGURES_FOLDER)/results
 DATASET_CREATION_CODE_PATH := $(PREPROCESSING_FOLDER)/create_dataset.py
 TRAIN_CODE_PATH := $(SRC_FOLDER)/train.py
 
-TRAIN_PATH := $(DATASET_FOLDER)/train/dataset_$(N_TRAIN)_$(N_CLASSES)_$(MASK_PERCENTAGE).pth
-TEST_PATH := $(DATASET_FOLDER)/test/dataset_$(N_TEST)_$(N_CLASSES)_$(MASK_PERCENTAGE).pth
+TRAIN_PATH := $(DATASET_FOLDER)/train/dataset_$(N_TRAIN)_$(N_CLASSES)_$(MASK_PERCENTAGE)_$(MASK_TYPE).pth
+TEST_PATH := $(DATASET_FOLDER)/test/dataset_$(N_TEST)_$(N_CLASSES)_$(MASK_PERCENTAGE)_$(MASK_TYPE).pth
 
 
 LOSS_DATA_PATH := $(LOSSES_DATA_FOLDER)/$(MODEL_NAME)_$(MODEL_IDENTIFIER).csv
