--- a/src/Makefile
+++ b/src/Makefile
@@ -22,6 +22,7 @@ LR_SCHEDULER := $(shell jq -r '.scheduler' $(CONFIG_FILE_PARAMS))
 MODEL_NAME := $(shell jq -r '.model_name' $(CONFIG_FILE_PARAMS))
 DATASET_NAME := $(shell jq -r '.dataset_name' $(CONFIG_FILE_PARAMS))
 MASK_TYPE := $(shell jq -r '.mask_name' $(CONFIG_FILE_PARAMS))
+REPEAT_IMAGES := $(shell jq -r '.repeat_images' $(CONFIG_FILE_PARAMS))
 
 MODEL_IDENTIFIER := $(N_TRAIN)_$(N_TEST)_$(N_CLASSES)_$(MASK_PERCENTAGE)_$(EPOCHS)_$(BATCH_SIZE)_$(LEARNING_RATE)
 
@@ -35,6 +36,11 @@ endif
 
 ifeq ($(RGB), True)
 	MODEL_IDENTIFIER := $(MODEL_IDENTIFIER)_rgb
+endif
+
+DATASET_IDENTIFIER := $(N_CLASSES)_$(MASK_PERCENTAGE)_$(MASK_TYPE)
+ifeq ($(REPEAT_IMAGES), True)
+	DATASET_IDENTIFIER := $(DATASET_IDENTIFIER)_repeated
 endif
 
 DATA_FOLDER := $(BASE_DIR)/data
@@ -63,8 +69,8 @@ SAMPLES_FOLDER := $(FIGURES_FOLDER)/samples
 DATASET_CREATION_CODE_PATH := $(PREPROCESSING_FOLDER)/create_dataset.py
 TRAIN_CODE_PATH := $(SRC_FOLDER)/train.py
 
-TRAIN_PATH := $(DATASET_FOLDER)/train/dataset_$(N_TRAIN)_$(N_CLASSES)_$(MASK_PERCENTAGE)_$(MASK_TYPE).pth
-TEST_PATH := $(DATASET_FOLDER)/test/dataset_$(N_TEST)_$(N_CLASSES)_$(MASK_PERCENTAGE)_$(MASK_TYPE).pth
+TRAIN_PATH := $(DATASET_FOLDER)/train/dataset_$(N_TRAIN)_$(DATASET_IDENTIFIER).pth
+TEST_PATH := $(DATASET_FOLDER)/test/dataset_$(N_TEST)_$(DATASET_IDENTIFIER).pth
 
 
 LOSS_DATA_PATH := $(LOSSES_DATA_FOLDER)/$(MODEL_NAME)_$(MODEL_IDENTIFIER).csv
