--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,107 @@
+affine==2.4.0
 aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
+aiohttp==3.10.11
 aiosignal==1.3.2
 alembic==1.14.0
-anyio==4.8.0
+anyio==4.7.0
+apache-airflow==2.10.4
+apache-airflow-providers-common-compat==1.2.2
+apache-airflow-providers-common-io==1.4.2
+apache-airflow-providers-common-sql==1.20.0
+apache-airflow-providers-fab==1.5.1
+apache-airflow-providers-ftp==3.11.1
+apache-airflow-providers-http==4.13.3
+apache-airflow-providers-imap==3.7.0
+apache-airflow-providers-smtp==1.8.1
+apache-airflow-providers-sqlite==3.9.1
+apispec==6.8.0
 appnope==0.1.4
+argcomplete==3.5.2
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
+asciitree==0.3.3
+asgiref==3.8.1
 asttokens==3.0.0
 async-lru==2.0.4
 attrs==24.3.0
 babel==2.16.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
+blinker==1.9.0
+boto3==1.35.87
+botocore==1.35.87
+cachelib==0.9.0
+cachier==3.1.2
 certifi==2024.12.14
 cffi==1.17.1
+cftime==1.6.4.post1
 charset-normalizer==3.4.1
+click==8.1.8
+click-plugins==1.1.1
+clickclick==20.10.2
+cligj==0.7.2
+cloudpickle==3.1.0
+colorama==0.4.6
 colorlog==6.9.0
 comm==0.2.2
+ConfigUpdater==3.2
+connexion==2.14.2
 contourpy==1.3.1
+cron-descriptor==1.4.5
+croniter==6.0.0
+cryptography==44.0.0
 cycler==0.12.1
+dask==2024.12.1
+dbfread==2.0.7
 debugpy==1.8.11
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.2.15
 dill==0.3.9
+dnspython==2.7.0
+email_validator==2.2.0
 executing==2.1.0
+fasteners==0.19
 fastjsonschema==2.21.1
 filelock==3.16.1
+fiona==1.10.1
+Flask==2.2.5
+Flask-AppBuilder==4.5.2
+Flask-Babel==2.0.0
+Flask-Caching==2.3.0
+Flask-JWT-Extended==4.7.1
+Flask-Limiter==3.9.2
+Flask-Login==0.6.3
+Flask-Session==0.5.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.2.2
 fonttools==4.55.3
 fqdn==1.5.1
 frozenlist==1.5.0
 fsspec==2024.12.0
+geopandas==1.0.1
+git-filter-repo==2.47.0
+google-re2==1.1.20240702
+googleapis-common-protos==1.66.0
 greenlet==3.1.1
+grpcio==1.68.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
-huggingface-hub==0.27.1
 idna==3.10
 imageio==2.36.1
+importlib_metadata==8.5.0
+inflection==0.5.1
 iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.31.0
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.5
+jmespath==1.0.1
 json5==0.10.0
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -58,95 +116,146 @@ jupyterlab==4.3.4
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 kiwisolver==1.4.8
+lazy-object-proxy==1.10.0
 lazy_loader==0.4
-lightning-utilities==0.11.9
+limits==3.14.1
+linkify-it-py==2.0.3
+locket==1.0.0
+lockfile==0.12.2
+logging==0.4.9.6
+lxml==5.3.0
 Mako==1.3.8
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.23.2
+marshmallow-oneofschema==3.1.1
+marshmallow-sqlalchemy==0.28.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
-mistune==3.1.0
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+methodtools==0.4.7
+mistune==3.0.2
+more-itertools==10.5.0
 mpmath==1.3.0
 multidict==6.1.0
-multiprocess==0.70.17
 nbclient==0.10.2
-nbconvert==7.16.5
+nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
+netCDF4==1.7.2
 networkx==3.4.2
 notebook==7.3.2
 notebook_shim==0.2.4
-numpy==1.26.4
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.6.85
-nvidia-nvtx-cu12==12.1.105
-opencv-python-headless==4.10.0.84
-optuna==4.1.0
+numcodecs==0.13.1
+numpy==1.26.0
+opencv-python==4.10.0.84
+opentelemetry-api==1.29.0
+opentelemetry-exporter-otlp==1.29.0
+opentelemetry-exporter-otlp-proto-common==1.29.0
+opentelemetry-exporter-otlp-proto-grpc==1.29.0
+opentelemetry-exporter-otlp-proto-http==1.29.0
+opentelemetry-proto==1.29.0
+opentelemetry-sdk==1.29.0
+opentelemetry-semantic-conventions==0.50b0
+ordered-set==4.1.0
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
+partd==1.4.2
+pathspec==0.12.1
+pendulum==3.0.0
 pexpect==4.9.0
-pillow==11.1.0
+pillow==11.0.0
+pipdeptree==2.24.0
 platformdirs==4.3.6
 pluggy==1.5.0
+portalocker==3.0.0
+prison==0.2.1
 prometheus_client==0.21.1
 prompt_toolkit==3.0.48
 propcache==0.2.1
+protobuf==5.29.2
 psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pyarrow==18.1.0
+pybind11==2.13.6
 pycparser==2.22
-Pygments==2.19.1
-pyparsing==3.2.1
+pyepsg==0.4.0
+Pygments==2.18.0
+PyJWT==2.10.1
+pyogrio==0.10.0
+pyparsing==3.2.0
+pyproj==3.7.0
+pystac==1.11.0
 pytest==8.3.4
+python-daemon==3.1.2
 python-dateutil==2.9.0.post0
 python-json-logger==3.2.1
-pytorch-msssim==1.0.0
+python-nvd3==0.16.0
+python-slugify==8.0.4
 pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
+rasterio==1.4.3
 referencing==0.35.1
 requests==2.32.3
+requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==13.9.4
+rich-argparse==1.6.0
 rpds-py==0.22.3
-scipy==1.15.1
+Rtree==1.3.0
+s3transfer==0.10.4
+scipy==1.14.1
+semver==3.0.2
 Send2Trash==1.8.3
+setproctitle==1.3.4
+shapely==2.0.6
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
-SQLAlchemy==2.0.37
+SQLAlchemy==1.4.54
+SQLAlchemy-JSONField==1.0.2
+SQLAlchemy-Utils==0.41.2
+sqlparse==0.5.3
 stack-data==0.6.3
 sympy==1.13.3
+tabulate==0.9.0
+tenacity==9.0.0
+termcolor==2.5.0
 terminado==0.18.1
-tifffile==2025.1.10
+text-unidecode==1.3
+tifffile==2024.12.12
+time-machine==2.16.0
 tinycss2==1.4.0
+toolz==1.0.0
 torch==2.2.2
-torchmetrics==1.6.1
+torchaudio==2.2.2
 torchvision==0.17.2
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
-triton==2.2.0
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2024.2
+uc-micro-py==1.0.3
+universal_pathlib==0.2.6
 uri-template==1.3.0
 urllib3==2.3.0
+watchdog==6.0.0
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
-xxhash==3.5.0
+Werkzeug==2.2.3
+wirerope==0.4.8
+wrapt==1.17.0
+WTForms==3.2.1
+xarray==2024.11.0
 yarl==1.18.3
+zarr==2.18.4
+zipp==3.21.0
