--- a/src/Makefile
+++ b/src/Makefile
@@ -6,16 +6,10 @@ PYTHONPATH := $(SRC_FOLDER)
 PYTHON := $(shell which python3)
 
 CONFIG_FILE_PATHS := $(SRC_FOLDER)/paths.json
-CONFIG_FILE_PARAMS := $(SRC_FOLDER)/params.json
+CONFIG_FILE_PARAMS := $(SRC_FOLDER)/params_thesis.json
 
 N_TRAIN := $(shell jq -r '.dataset_params.n_train' $(CONFIG_FILE_PARAMS))
 N_TEST := $(shell jq -r '.dataset_params.n_test' $(CONFIG_FILE_PARAMS))
-N_CLASSES := $(shell jq -r '.dataset_params.n_classes' $(CONFIG_FILE_PARAMS))
-RGB := $(shell jq -r '.dataset_params.rgb' $(CONFIG_FILE_PARAMS))
-N_CHANNELS := $(shell jq -r '.dataset_params.n_channels' $(CONFIG_FILE_PARAMS))
-DATASET_NAME := $(shell jq -r '.dataset_params.dataset_name' $(CONFIG_FILE_PARAMS))
-MASK_TYPE := $(shell jq -r '.dataset_params.mask_name' $(CONFIG_FILE_PARAMS))
-REPEAT_IMAGES := $(shell jq -r '.dataset_params.repeat_images' $(CONFIG_FILE_PARAMS))
 
 BATCH_SIZE := $(shell jq -r '.train_params.batch_size' $(CONFIG_FILE_PARAMS))
 EPOCHS := $(shell jq -r '.train_params.epochs' $(CONFIG_FILE_PARAMS))
@@ -24,7 +18,7 @@ INITIALIZE := $(shell jq -r '.train_params.initialize' $(CONFIG_FILE_PARAMS))
 LR_SCHEDULER := $(shell jq -r '.train_params.scheduler' $(CONFIG_FILE_PARAMS))
 MODEL_NAME := $(shell jq -r '.train_params.model_name' $(CONFIG_FILE_PARAMS))
 
-MODEL_IDENTIFIER := $(N_TRAIN)_$(N_TEST)_$(N_CLASSES)_$(EPOCHS)_$(BATCH_SIZE)_$(LEARNING_RATE)
+MODEL_IDENTIFIER := $(N_TRAIN)_$(N_TEST)_$(EPOCHS)_$(BATCH_SIZE)_$(LEARNING_RATE)
 
 ifeq ($(LR_SCHEDULER), True)
 	MODEL_IDENTIFIER := $(MODEL_IDENTIFIER)_scheduled
@@ -34,15 +28,6 @@ ifeq ($(INITIALIZE), True)
 	MODEL_IDENTIFIER := $(MODEL_IDENTIFIER)_initialized
 endif
 
-ifeq ($(RGB), True)
-	MODEL_IDENTIFIER := $(MODEL_IDENTIFIER)_rgb
-endif
-
-DATASET_IDENTIFIER := $(N_CLASSES)_$(MASK_TYPE)
-ifeq ($(REPEAT_IMAGES), True)
-	DATASET_IDENTIFIER := $(DATASET_IDENTIFIER)_repeated
-endif
-
 DATA_FOLDER := $(BASE_DIR)/data
 FIGURES_FOLDER := $(BASE_DIR)/figs
 LOSSES_FOLDER := $(FIGURES_FOLDER)/losses
@@ -50,20 +35,21 @@ MODELS_FOLDER := $(SRC_FOLDER)/models
 PREPROCESSING_FOLDER := $(SRC_FOLDER)/data_preprocessing
 
 CODE_FOLDER := $(MODELS_FOLDER)
-RAW_DATA_FOLDER := $(DATA_FOLDER)/$(DATASET_NAME)
-ifeq ($(DATASET_NAME), tinyimagenet)
-	RAW_DATA_FOLDER := $(RAW_DATA_FOLDER)/train
-endif
+RAW_DATA_FOLDER := $(DATA_FOLDER)
 
-DATASET_FOLDER := $(DATA_FOLDER)/datasets/$(DATASET_NAME)
-FIGURES_FOLDER := $(BASE_DIR)/figs/$(DATASET_NAME)
+BATHYMETRY_FOLDER := $(RAW_DATA_FOLDER)/bathymetry/EMODnet_bathymetry
+LAND_FOLDER := $(RAW_DATA_FOLDER)/land/Copernicus_land_ortho
+INTERPOLATED_FOLDER := $(RAW_DATA_FOLDER)/interpolated
+WEIGHTS_FOLDER := $(DATA_FOLDER)/weights_thesis
+RESULTS_FOLDER := $(DATA_FOLDER)/results_thesis
+DATASET_FOLDER := $(DATA_FOLDER)/dataset
 
-WEIGHTS_FOLDER := $(DATA_FOLDER)/weights/$(DATASET_NAME)
-RESULTS_FOLDER := $(DATA_FOLDER)/results/$(DATASET_NAME)
-OPTIM_FOLDER := $(DATA_FOLDER)/optimization/$(DATASET_NAME)
+FIGURES_FOLDER := $(BASE_DIR)/figs_thesis
+
+OPTIM_FOLDER := $(DATA_FOLDER)/optimization_thesis
 TESTS_FOLDER := $(SRC_FOLDER)/tests
-RESULTS_PLOT_FOLDER := $(FIGURES_FOLDER)/results
-SAMPLES_FOLDER := $(FIGURES_FOLDER)/samples
+RESULTS_PLOT_FOLDER := $(FIGURES_FOLDER)/results_thesis
+SAMPLES_FOLDER := $(FIGURES_FOLDER)/samples_thesis
 
 
 DATASET_CREATION_CODE_PATH := $(PREPROCESSING_FOLDER)/create_dataset.py
@@ -81,20 +67,39 @@ OPTIM_PATH := $(OPTIM_FOLDER)/$(MODEL_NAME)_$(MODEL_IDENTIFIER).json
 .DEFAULT:
 	@echo "Invalid target. Please run 'make help' for more information."
 
-.PHONY: config preprocess train test zipw help
+.PHONY: config preprocess regrid train test zipw help
 
 config:
-	@echo '{"raw_data_folder": "$(RAW_DATA_FOLDER)", "dataset_path": "$(DATASET_FOLDER)", "weights_path": "$(WEIGHTS_PATH)", "loss_figure_path": "$(LOSS_FIGURE_PATH)", "results_path": "$(RESULTS_PATH)", "results_plot_path": "$(RESULTS_PLOT_PATH)", "samples_folder": "$(SAMPLES_FOLDER)", "optim_path": "$(OPTIM_PATH)"' > $(CONFIG_FILE_PATHS)
-ifeq ($(DATASET_NAME), tinyimagenet)
-	@echo ', "train_path": "$(TRAIN_PATH)", "test_path": "$(TEST_PATH)", "image_extension": ".JPEG"' >> $(CONFIG_FILE_PATHS)
-else ifeq ($(DATASET_NAME), groceries)
-	@echo ', "train_path": "$(TRAIN_PATH)", "test_path": "$(TEST_PATH)", "image_extension": ".png"' >> $(CONFIG_FILE_PATHS)
-endif
+	@echo '{' > $(CONFIG_FILE_PATHS)
+	@echo '  "bathymetry" : {' >> $(CONFIG_FILE_PATHS)
+	@echo '		"folder" : "$(BATHYMETRY_FOLDER)",' >> $(CONFIG_FILE_PATHS)
+	@echo '		"base" : "$(BATHYMETRY_FOLDER)/base/",' >> $(CONFIG_FILE_PATHS)
+	@echo '     "netcdf" : "$(BATHYMETRY_FOLDER)/netcdf/",' >> $(CONFIG_FILE_PATHS)
+	@echo '     "numpy" : "$(BATHYMETRY_FOLDER)/npy/",' >> $(CONFIG_FILE_PATHS)
+	@echo '     "raw" : "$(BATHYMETRY_FOLDER)/raw/",' >> $(CONFIG_FILE_PATHS)
+	@echo '     "merged" : "$(BATHYMETRY_FOLDER)/merged.npy"' >> $(CONFIG_FILE_PATHS)
+	@echo '	},' >> $(CONFIG_FILE_PATHS)
+	@echo '  "land" : {' >> $(CONFIG_FILE_PATHS)
+	@echo '		"folder" : "$(LAND_FOLDER)",' >> $(CONFIG_FILE_PATHS)
+	@echo '		"base" : "$(LAND_FOLDER)/base/",' >> $(CONFIG_FILE_PATHS)
+	@echo '     "raw" : "$(LAND_FOLDER)/raw/",' >> $(CONFIG_FILE_PATHS)
+	@echo '     "zip" : "$(LAND_FOLDER)/zip/",' >> $(CONFIG_FILE_PATHS)
+	@echo '     "coord_boundaries" : "$(LAND_FOLDER)/coord_boundaries.csv"' >> $(CONFIG_FILE_PATHS)
+	@echo '	},' >> $(CONFIG_FILE_PATHS)
+	@echo '  "interpolated" : {' >> $(CONFIG_FILE_PATHS)
+	@echo '		"folder" : "$(INTERPOLATED_FOLDER)",' >> $(CONFIG_FILE_PATHS)
+	@echo '		"base" : "$(INTERPOLATED_FOLDER)/base/",' >> $(CONFIG_FILE_PATHS)
+	@echo '     "zip" : "$(INTERPOLATED_FOLDER)/zip/"' >> $(CONFIG_FILE_PATHS)
+	@echo '	}' >> $(CONFIG_FILE_PATHS)
 	@echo '}' >> $(CONFIG_FILE_PATHS)
 
 preprocess : config
 	@echo "\nCreating train dataset with $(DATASET_CREATION_CODE_PATH) code..."
 	$(PYTHON) $(DATASET_CREATION_CODE_PATH) --paths $(CONFIG_FILE_PATHS) --params $(CONFIG_FILE_PARAMS)
+
+regrid:
+	@echo "Regridding the dataset..."
+	$(PYTHON) $(PREPROCESSING_FOLDER)/regrid.py --paths $(CONFIG_FILE_PATHS) --params $(CONFIG_FILE_PARAMS)
 
 train: config
 	@echo "Training the model..."
